# BlenderGeminiAgent

./: .gitignore  README.md  agent_client.py  app.py  pyproject.toml  test_client.py
BlenderGeminiAgent/: __init__.py  blender_manifest.toml  engine.py  hello_operator.py  operators.py  prefs.py  server.py
client/: agent.py  blender_client.py  config.py  logger.py
tests/blender/: test_in_blender.py
tests/unit/: test_hello.py
tools/: build_addon_zip.py
